--- a/TEDxADIS-Muroor-Youth.css
+++ b/TEDxADIS-Muroor-Youth.css
@@ -757,6 +757,28 @@
   margin: 20px 0 0;
 }
 
+.u-section-5 .u-container-layout-10 {
+  padding: 30px;
+}
+
+.u-section-5 .u-image-10 {
+  height: 298px;
+  margin-top: 0;
+  margin-bottom: 0;
+  object-position: 50% 0%;
+}
+
+.u-section-5 .u-text-20 {
+  font-family: horizon;
+  font-weight: 700;
+  margin: 20px 61px 0 0;
+}
+
+.u-section-5 .u-text-21 {
+  font-size: 1rem;
+  margin: 20px 0 0;
+}
+
 .u-section-5 .u-gallery-nav-1 {
   position: absolute;
   left: 10px;
@@ -866,6 +888,15 @@
   .u-section-5 .u-text-18 {
     margin-right: 0;
   }
+
+  .u-section-5 .u-image-10 {
+    object-position: 50% 100%;
+    height: 236px;
+  }
+
+  .u-section-5 .u-text-20 {
+    margin-right: 0;
+  }
 }
 
 @media (max-width: 991px) {
@@ -921,6 +952,10 @@
   }
 
   .u-section-5 .u-image-9 {
+    height: 279px;
+  }
+
+  .u-section-5 .u-image-10 {
     height: 279px;
   }
 }
@@ -1016,6 +1051,14 @@
   .u-section-5 .u-image-9 {
     height: 484px;
   }
+
+  .u-section-5 .u-container-layout-10 {
+    padding-right: 40px;
+  }
+
+  .u-section-5 .u-image-10 {
+    height: 484px;
+  }
 }
 
 @media (max-width: 575px) {
@@ -1107,6 +1150,14 @@
   }
 
   .u-section-5 .u-image-9 {
+    height: 298px;
+  }
+
+  .u-section-5 .u-container-layout-10 {
+    padding-right: 30px;
+  }
+
+  .u-section-5 .u-image-10 {
     height: 298px;
   }
 } .u-section-6 {
